Fix illustration icon card on mobile

--- a/media/css/cms/flare26-card.css
+++ b/media/css/cms/flare26-card.css
@@ -477,6 +477,11 @@ Illustration Card
     }
 }
 
+.fl-illustration-card.fl-illustration-icon-card {
+    flex-direction: row;
+    gap: var(--token-spacing-lg);
+}
+
 .fl-illustration-card.fl-illustration-icon-card img {
     border-radius: 0;
     margin: 0;
@@ -485,9 +490,23 @@ Illustration Card
 .fl-illustration-card.fl-illustration-icon-card .fl-card-media {
     align-items: center;
     background-color: var(--fl-theme-illustration-icon-bg);
+    border-radius: var(--token-spacing-md);
     display: flex;
     justify-content: center;
     margin-block-end: var(--token-spacing-lg);
-    max-width: 102px;
+    max-height: 56px;
+    max-width: 56px;
     padding: var(--token-spacing-md);
+}
+
+@media (--viewport-md-up) {
+    .fl-illustration-card.fl-illustration-icon-card {
+        flex-direction: column;
+    }
+
+    .fl-illustration-card.fl-illustration-icon-card .fl-card-media {
+        border-radius: var(--token-spacing-xl);
+        max-height: 102px;
+        max-width: 102px;
+    }
 }
